--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:background="@drawable/signin"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"/>
+
+
 
 
 
