--- a/app/src/main/res/layout/activity_writememo.xml
+++ b/app/src/main/res/layout/activity_writememo.xml
@@ -9,31 +9,26 @@
         android:id="@+id/imageView"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/xicon"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/memo_xicon"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:backgroundTint="#C3A4FA"
         android:hint="Input text"
-        android:hintColor="#C3A4FA"
         android:textColor="#C3A4FA"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintBottom_toTopOf="@+id/button" />
 
     <Button
         android:id="@+id/button"
