ToDo RecyclerView ui Implementation finished

--- a/app/src/main/res/layout/todo_hard_list_item.xml
+++ b/app/src/main/res/layout/todo_hard_list_item.xml
@@ -9,9 +9,9 @@
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="#BF9BFF"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:buttonTint="#BF9BFF"
         android:text=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,8 +19,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginHorizontal="8dp"
         android:paddingVertical="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -28,20 +27,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_left_solid"
+            android:background="@drawable/hard_limit_left_solid"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/common_header"
+                    android:id="@+id/hard_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -52,13 +50,13 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
                     android:background="#A079E6" />
 
 
                 <TextView
-                    android:id="@+id/common_list_info"
+                    android:id="@+id/hard_list_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -67,9 +65,8 @@
                     android:gravity="center"
                     android:text="3 days left, 100%" />
 
+
             </LinearLayout>
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-
 </android.support.constraint.ConstraintLayout>
