--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,7 +65,6 @@
             app:layout_constraintBottom_toTopOf="@id/main_menubar"
             app:layout_constraintTop_toBottomOf="@id/main_tab" />
 
-
         <android.support.constraint.ConstraintLayout
             android:id="@+id/main_menubar"
             android:layout_width="match_parent"
@@ -102,6 +101,7 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.FloatingActionButton
+            app:elevation="0dp"
             app:backgroundTint="#C4A2FF"
             android:id="@+id/todo_fab"
             android:layout_width="wrap_content"
@@ -119,7 +119,7 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:visibility="invisible"
+            app:elevation="0dp"
             app:backgroundTint="#B68EFD"
             android:id="@+id/ideas_fab"
             android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:visibility="invisible"
+            app:elevation="0dp"
             app:backgroundTint="#AD82FA"
             android:id="@+id/memo_fab"
             android:layout_width="wrap_content"
