--- a/app/src/main/res/layout/item_ideas.xml
+++ b/app/src/main/res/layout/item_ideas.xml
@@ -7,6 +7,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/item_ideas"
+        android:elevation="5dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="10dp"
@@ -44,7 +45,6 @@
             android:background="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <TextView
             android:id="@+id/item_ideas_rank_text"
