--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="@color/colorPrimary"
-            android:elevation="1dp"
+            android:elevation="5dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:tabGravity="fill"
             app:tabMode="fixed" />
@@ -101,8 +101,6 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.FloatingActionButton
-            app:elevation="0dp"
-            app:backgroundTint="#C4A2FF"
             android:id="@+id/todo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -112,6 +110,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
+            app:backgroundTint="#C4A2FF"
+            app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -119,8 +119,6 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            app:elevation="0dp"
-            app:backgroundTint="#B68EFD"
             android:id="@+id/ideas_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,6 +128,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
+            app:backgroundTint="#B68EFD"
+            app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,8 +137,6 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            app:elevation="0dp"
-            app:backgroundTint="#AD82FA"
             android:id="@+id/memo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -148,23 +146,29 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
+            app:backgroundTint="#AD82FA"
+            app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/main_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
             app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <View
+            android:id="@+id/memo_view"
+            android:layout_width="168dp"
+            android:layout_height="140dp"
+            android:background="@drawable/fab_background_view_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
