--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -7,13 +7,14 @@
     android:layout_height="140dp">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/item_store_item"
         android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="10dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:elevation="8dp">
+        android:elevation="5dp">
 
         <TextView
             android:id="@+id/item_store_title"
