--- a/app/src/main/res/anim/main_fab_rotate_anim2.xml
+++ b/app/src/main/res/anim/main_fab_rotate_anim2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="100"
-    android:fillAfter="false">
+    android:fillAfter="true">
 
     <rotate
         android:fromDegrees="45"
