--- a/app/src/main/res/layout/activity_to_do_create.xml
+++ b/app/src/main/res/layout/activity_to_do_create.xml
@@ -6,25 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ToDo.ToDoCreateActivity">
 
-    <LinearLayout
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:id="@+id/todo_create_view_pager">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select Category"
-            android:textSize="35dp"
-            android:textColor="#C3A4FA"/>
-
-        <Spinner
-            android:id="@+id/spinner_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </Spinner>
-
-    </LinearLayout>
+    </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
