--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
     android:layout_height="200dp"
-    android:clickable="true">
+    android:clickable="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#EADFFF">
+        android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/viewbar"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="#E1CFFF" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/memo_vert"
-            android:layout_alignParentRight="true"
-            android:layout_margin="5dp"/>
-
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/viewbar"
-            android:layout_margin="10dp"
-            android:text="activity_cardviewmemo"
-            android:textSize="20dp"
-            android:textColor="#A079E6" />
+            android:background="#EADFFF">
 
-    </RelativeLayout>
+            <View
+                android:id="@+id/viewbar"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:background="#E1CFFF" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/memo_vert"
+                android:layout_alignParentRight="true"/>
+
+            <TextView
+                android:id="@+id/previewText"
+                android:layout_width="350dp"
+                android:layout_height="150dp"
+                android:layout_below="@id/viewbar"
+                android:layout_margin="15dp"
+                android:textSize="20dp"
+                android:textColor="#A079E6"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
