--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -24,7 +24,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/memo_vert"
+                android:src="@drawable/more_vert"
                 android:layout_alignParentRight="true"/>
 
             <TextView
