--- a/app/src/main/res/layout/fragment_quickmemo.xml
+++ b/app/src/main/res/layout/fragment_quickmemo.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_id"
+        android:id="@+id/qm_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager">
