--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/timeline_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
 
     </android.support.v7.widget.RecyclerView>
