--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -6,11 +6,12 @@
     android:layout_height="300dp">
 
     <android.support.constraint.ConstraintLayout
-        android:background="#fff"
         android:id="@+id/item_timeline"
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_margin="10dp"
+        android:background="#fff"
+        android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
