--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView
-    android:layout_width="350dp"
+    android:layout_width="380dp"
     android:layout_height="200dp"
     android:clickable="true"
+    android:layout_marginBottom="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -12,19 +13,19 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#EADFFF">
+            android:layout_height="match_parent">
 
             <View
                 android:id="@+id/viewbar"
                 android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:background="#E1CFFF" />
+                android:layout_height="50dp"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:src="@drawable/more_vert"
+                android:background="#00FF0000"
                 android:layout_alignParentRight="true"/>
 
             <TextView
@@ -32,9 +33,12 @@
                 android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_below="@id/viewbar"
-                android:layout_margin="15dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
                 android:textSize="20dp"
-                android:textColor="#A079E6"/>
+                android:textColor="#2C007B" />
 
         </RelativeLayout>
 
