--- a/app/src/main/res/layout/activity_writememo.xml
+++ b/app/src/main/res/layout/activity_writememo.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,28 +10,47 @@
         android:id="@+id/xIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/memo_xicon"
         android:background="@drawable/memo_xicon"
-        app:layout_constraintBottom_toTopOf="@+id/contentEditText"
+        android:src="@drawable/memo_xicon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Edit"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/xIcon" />
+
     <EditText
         android:id="@+id/contentEditText"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="#C3A4FA"
-        android:hint="Input text"
+        android:layout_height="500dp"
+        android:layout_margin="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#2C007B"
         android:gravity="top"
-        android:textColor="#C3A4FA"
+        android:hint="Input text"
+        android:textColorHint="#2C007B"
+        android:textColor="#2C007B"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/finishButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/finishButton"
@@ -41,12 +61,19 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="#00FF0000"
         android:text="Finish"
-        android:textColor="#C3A4FA"
+        android:textColor="#2C007B"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contentEditText" />
+
+
+
+
 
 </android.support.constraint.ConstraintLayout>
