--- a/app/src/main/res/layout/activity_viewmemo.xml
+++ b/app/src/main/res/layout/activity_viewmemo.xml
@@ -8,49 +8,50 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="12">
+        android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/viewMemo"
             android:layout_margin="20dp"
             android:layout_width="match_parent"
-            android:layout_height="525dp"
+            android:layout_height="0dp"
+            android:layout_weight="12"
             android:text="Love is open door~~~~~~"
             android:textColor="#2C007B"
             android:textSize="20dp"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/editFab"
-            android:layout_margin="20dp"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/memo_floating"
-            android:backgroundTint="#FFFFFF" />
-
         <FrameLayout
             android:id="@+id/under_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_below="@id/viewMemo"
             android:background="#2C007B">
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/editFab"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/memo_floating"
+                android:backgroundTint="#FFFFFF" />
+
+            <ImageView
+                android:id="@+id/editIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/circle"
+                android:layout_marginBottom="10dp"/>
+
             <ImageButton
+                android:id="@+id/search_btn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="#00FF0000"
-                android:layout_gravity="right"
-                />
+                android:layout_gravity="right"/>
 
         </FrameLayout>
-
-    </RelativeLayout>
 
 </LinearLayout>
