--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView
-    android:layout_width="380dp"
+    android:layout_width="match_parent"
     android:layout_height="200dp"
     android:clickable="true"
-    android:layout_marginBottom="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
