MVP 패턴 적용, 파일 이름 수정

--- a/app/src/main/res/layout/fragment_create_todo.xml
+++ b/app/src/main/res/layout/fragment_create_todo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ToDo.CreateTodoFragment">
+    tools:context=".ToDo.TodoCreate.Fragment.CreateTodoFragment">
 
     <EditText
         android:id="@+id/new_text"
@@ -39,6 +39,7 @@
         android:layout_marginTop="8dp"/>
 
     <TextView
+        android:id="@+id/todo_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish"
