--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -7,17 +7,10 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/TodoList">
+        android:id="@+id/TodoList"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/todo_create_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="create Todo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="30dp"/>
+
 </android.support.constraint.ConstraintLayout>
