--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="200dp"
@@ -10,6 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        android:id="@+id/cardViewMemo_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,6 +23,7 @@
                 android:layout_height="50dp"/>
 
             <ImageButton
+                android:id="@+id/settingButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
