--- a/app/src/main/res/layout/activity_mirror.xml
+++ b/app/src/main/res/layout/activity_mirror.xml
@@ -3,16 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ExpandableListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    </ExpandableListView>
 
 </android.support.constraint.ConstraintLayout>
