--- a/app/src/main/res/layout/fragment_select_category.xml
+++ b/app/src/main/res/layout/fragment_select_category.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/category_next"
+        app:layout_constraintBottom_toTopOf="@id/category_next"
         app:layout_constraintTop_toBottomOf="@+id/category_header" />
 
     <TextView
