signin 서버 연동 해결

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -117,7 +117,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
-            app:backgroundTint="#C4A2FF"
+            app:backgroundTint="#7058DA"
             app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -148,7 +148,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
-            app:backgroundTint="#B68EFD"
+            app:backgroundTint="#614DB8"
             app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -178,7 +178,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/baseline_add_24"
-            app:backgroundTint="#AD82FA"
+            app:backgroundTint="#5643A9"
             app:elevation="0dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
