--- a/app/src/main/res/layout/activity_mirror.xml
+++ b/app/src/main/res/layout/activity_mirror.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/mirror_activity">
 
-    <ExpandableListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mirror_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-    </ExpandableListView>
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent"/>
+    
+</LinearLayout>
