--- a/app/src/main/res/layout/fragment_select_category.xml
+++ b/app/src/main/res/layout/fragment_select_category.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Category"
-        android:textColor="#C3A4FA"
+        android:textColor="@color/colorPrimary"
         android:textSize="35dp"
         app:layout_constraintBottom_toTopOf="@+id/category_spinner"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,6 +26,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/category_next"
         app:layout_constraintTop_toBottomOf="@+id/category_header" />
 
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:text="Next"
-        android:textColor="#C3A4FA"
+        android:textColor="@color/colorPrimary"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
