--- a/app/src/main/res/layout/item_inventory.xml
+++ b/app/src/main/res/layout/item_inventory.xml
@@ -53,14 +53,14 @@
             android:id="@+id/item_inventory_button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#fff"
+            android:background="#2C007B"
             app:layout_constraintTop_toBottomOf="@id/item_inventory_topview">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Use"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#fff"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
