--- a/app/src/main/res/layout/activity_cardviewmemo.xml
+++ b/app/src/main/res/layout/activity_cardviewmemo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="200dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
@@ -22,7 +22,7 @@
                 android:layout_width="350dp"
                 android:layout_height="50dp"/>
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/settingButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
