--- a/app/src/main/res/layout/activity_mirror.xml
+++ b/app/src/main/res/layout/activity_mirror.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:id="@+id/mirror_activity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mirror_recycler"
+    <ExpandableListView
+        android:id="@+id/mirror_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    
+        android:layout_height="match_parent"
+        android:childDivider="#00000000"/>
+
 </LinearLayout>
