--- a/app/src/main/res/layout/mirror_child.xml
+++ b/app/src/main/res/layout/mirror_child.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +8,17 @@
     <TextView
         android:id="@+id/childText1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:textSize="25dp"
+        android:textColor="#2C007B"
         android:paddingLeft="40dip"/>
 
     <TextView
         android:id="@+id/childText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"/>
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="#2C007B"/>
 
-</LinearLayout>
+</RelativeLayout>
