--- a/app/src/main/res/layout/mirror_parent.xml
+++ b/app/src/main/res/layout/mirror_parent.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/parentText"
+        android:id="@+id/heading"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="41dp"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"
+        android:textColor="#000000"
+        android:layout_marginBottom="20dp"
+        android:textStyle="bold"
         android:paddingLeft="5px"/>
 
 </LinearLayout>
