--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content" />
 
         <ImageView
+            android:id="@+id/dialog_search_btn"
             android:layout_marginRight="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
