--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="230dp"
