--- a/app/src/main/res/layout/mirror_child.xml
+++ b/app/src/main/res/layout/mirror_child.xml
@@ -9,6 +9,8 @@
         android:id="@+id/childText1"
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         android:textSize="25dp"
         android:textColor="#2C007B"
         android:paddingLeft="40dip"/>
@@ -17,8 +19,9 @@
         android:id="@+id/childText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
-        android:textStyle="bold"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:textSize="25dp"
         android:textColor="#2C007B"/>
 
 </RelativeLayout>
