--- a/app/src/main/res/layout/mirror_parent.xml
+++ b/app/src/main/res/layout/mirror_parent.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/mirror_highlight"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_centerVertical="true"
+        android:paddingLeft="10dp"
+        android:src="@drawable/highlighting"/>
 
     <TextView
         android:id="@+id/heading"
@@ -10,8 +18,9 @@
         android:layout_height="wrap_content"
         android:textSize="50dp"
         android:textColor="#000000"
-        android:layout_marginBottom="20dp"
+        android:text="Last Week"
         android:textStyle="bold"
-        android:paddingLeft="5px" />
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="10dp" />
 
-</LinearLayout>
+</RelativeLayout>
